- Add icons - Add DataRegionUniversity in App - Add Build Id

--- a/UnivMobile/res/values/strings.xml
+++ b/UnivMobile/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
 	<string name="buildDisplayName"></string>
 	<string name="gitCommit"></string>
+	<string name="buildId"></string>
     
     <string name="app_name">UnivMobile</string>
     <string name="textAlertDialogJamais">Jamais</string>
