- Add Some doc - Increment for next alpha

--- a/UnivMobile/res/values/strings.xml
+++ b/UnivMobile/res/values/strings.xml
@@ -3,6 +3,7 @@
 	<string name="buildDisplayName"></string>
 	<string name="gitCommit"></string>
 	<string name="buildId"></string>
+	<string name="mapsApiKey">AIzaSyD61Afm00SQHMKpkd81Rn50nPJCAaIRxGg</string>
     
     <string name="app_name">UnivMobile</string>
     <string name="textAlertDialogJamais">Jamais</string>
