--- a/UnivMobile/res/values/strings.xml
+++ b/UnivMobile/res/values/strings.xml
@@ -7,7 +7,9 @@
 	<string name="no_results">Pas de résultat</string>
 	<string name="no_libraries">Pas de bibliothèque</string>
 	<string name="no_media">Pas de lien</string>
-	<string name="need_to_login">besoin de vous connecter avant de poster un commentaire</string>
+	<string name="need_to_login_to_post_comment">Merci de vous connecter pour pouvoir envoyer votre commentaire</string>
+	<string name="need_to_login_to_post_poi">Merci de vous connecter pour pouvoir ajouter votre point d\'intérêt</string>
+	<string name="need_to_login_to_bookmark_poi">Merci de vous connecter pour ajouter votre bookmark</string>
 	<string name="no_internet">Vous n\'êtes pas connecté à internet. Merci de vous connecter.</string>
 	<string name="click_to_close">Etes-vous sûr de vouloir fermer l\'application Univmobile ?</string>
 	<string name="home">Accueil</string>
